Attempt to fix safari drop down alignment issue.

--- a/src/Components/Pages/Reservation/BookingForm/BookingForm.css
+++ b/src/Components/Pages/Reservation/BookingForm/BookingForm.css
@@ -123,24 +123,30 @@
 
 .drop-down {
   display: flex;
-  margin: 1rem 0rem 1rem 0rem; /* top | right | bottom | left */
+  align-items: center;
+  margin: 1rem 0rem; /*top and bottom | left and right*/
   padding: 0.5rem 1rem 0.5rem 0; /* top | right | bottom | left */
-  min-width: 180px;
+
   appearance: none; /*This will remove the standard arrow*/
   background-image: url(../../../../Images/chevron-down-solid-green.svg);
+  /* background-image: url(./Images/chevron-down-solid-green.svg); */
   background-repeat: no-repeat;
   background-size: 17px;
   background-color: #edefee;
   background-position: 90%;
+
+  min-width: 160px;
+  max-width: 270px;
+
   color: #495e57;
   font-size: 18px;
   font-weight: bold;
   line-height: 24px;
-  text-align: center;
+  /* text-align: center; */
   border: none;
   border-radius: 20px;
   box-shadow: 4px 4px 4px #00000026;
-  max-width: 270px;
+
   grid-column-start: 2;
   grid-column-end: 4;
 }
@@ -162,7 +168,7 @@ option {
 
 .has-value-selected {
   background-color: #495e57;
-  background-image: url(../../../../../public/images/chevron-down-solid-white.svg);
+  background-image: url(../../../../Images/chevron-down-solid-white.svg);
   color: #ffffff;
 }
 
